# iota-iiot-communication

./: .gitignore  README.md  kill-ports.sh  start-service.sh
bash/: init.sh  start-gateway.sh  start-sensor.sh
client/: Cargo.toml  README.md  build.rs
client/migrations/2022-04-09-162200_create_database/: down.sql
client/proto/: iota_identity_grpc.proto  iota_streams_grpc.proto  mqtt_grpc.proto
client/src/: config.rs  db_module.rs  main.rs  models.rs  prolog.rs  recv_mqtt.rs  req_verification.rs  send_mqtt.rs  state_machine.rs  util.rs
docker/: Dockerfile.clientfactory  Dockerfile.clientvendor  Dockerfile.gatewaydoc  Dockerfile.gatewaymock  Dockerfile.gatewayopcua  README.md  client.sh  client_factory.sh  gateway-grpc_startup.toml  gateway-grpc_startup_doc.toml  gateway-grpc_startup_opcua.toml  gateway_doc.sh  gateway_mock.sh  gateway_opcua.sh  mqtt-grpc_gateway.toml
docker/db/clientfactory/: README.md
docker/db/clientvendor/: README.md
docker/db/gatewaydoc/: README.md
docker/db/gatewaymock/: README.md
docker/db/gatewayopcua/: README.md
docker/storage/clientfactory/: README.md
docker/storage/clientvendor/: README.md
docker/storage/gatewaydoc/: README.md
docker/storage/gatewaymock/: README.md
docker/storage/gatewayopcua/: README.md
gateway/: .gitignore  Cargo.toml  README.md
gateway/config/: README.md
gateway/migrations/2022-04-09-162200_create_database/: down.sql  up.sql
gateway/proto/: iota_identity_grpc.proto  iota_streams_grpc.proto  mqtt_encoder.proto  mqtt_grpc.proto
gateway/src/: config.rs  connected_sensors.rs  db_module.rs  main.rs  models.rs  prolog.rs  recv_mqtt.rs  req_verification.rs  schema.rs  send_mqtt.rs  state_machine.rs  util.rs
iota-identity-service/: .gitignore  Cargo.toml  README.md  build.rs
iota-identity-service/proto/: iota_identity_grpc.proto
iota-identity-service/src/: client.rs  config.rs  grpc_service.rs  iota_identity_module.rs  main.rs
iota-identity-service/storage/: README.md
iota-streams-service/: .gitignore  Cargo.toml  README.md  build.rs
iota-streams-service/config/: README.md
iota-streams-service/proto/: iota_streams_grpc.proto
iota-streams-service/src/: client.rs  config.rs  grpc_service.rs  iota_streams_module.rs  main.rs  msg_util.rs  streams_service.rs
iota-streams-service/states/: README.md
rust-mqtt-service/: .gitignore  Cargo.toml  README.md  build.rs
rust-mqtt-service/cert/: README.md
rust-mqtt-service/proto/: mqtt_grpc.proto
rust-mqtt-service/src/: client.rs  config.rs  grpc_service.rs  main.rs  mqtt_module.rs
rust-sensors/: Cargo.toml  README.md
rust-sensors/bluetooth/: Cargo.toml  README.md
rust-sensors/bluetooth/src/: client.rs  config.rs  server.rs
rust-sensors/mock/: .gitignore  Cargo.toml  README.md
rust-sensors/mock/src/: client.rs  config.rs  server.rs
rust-sensors/opc-ua/: .gitignore  Cargo.toml  README.md
rust-sensors/opc-ua/opcua-config/: server.conf
rust-sensors/opc-ua/src/: client.rs  config.rs  opcua-grpc-server.rs  server.rs
rust-sensors/opcua-config/: client.conf
rust-sensors/send_doc/: .gitignore  Cargo.toml
rust-sensors/send_doc/src/: client.rs  config.rs  server.rs
test/public_channel/: .gitignore  Cargo.toml  README.md
test/public_channel/src/: config.rs  main.rs
test/tangle_access/: .gitignore  Cargo.toml
test/tangle_access/src/: config.rs  main.rs
