[package]
name = "gateway"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "gateway"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.17.0", features = ["full"] }
confy = "0.4.0"
serde = "1.0.136"
serde_derive = "1.0.136"
serde_json = "1.0.79"
prost = "0.9"
tonic = "0.6.2"
public-ip = "0.2.2"
log = "0.4.0"
env_logger = "0.9.0"
# DB
diesel = { version = "1.4.4", default-features = false, features = ["sqlite"] }
diesel_migrations = "1.4.0"
diesel_codegen = { version = "0.16.0"}
libsqlite3-sys = { version = ">=0.8.0, <0.19.0", features = ["bundled"] }
dotenv = "0.15.0"
# Sensors
sensor-grpc-adapter = { git = "https://github.com/fprotopapa/sensor-grpc-adapter.git", branch = "main" }

[build-dependencies]
tonic-build = "0.6.2"
