[package]
name = "bluetooth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "bluetooth-server"
path = "src/server.rs"

[[bin]]
name = "bluetooth-client"
path = "src/client.rs"

[dependencies]
sensor-grpc-adapter = { git = "https://github.com/fprotopapa/sensor-grpc-adapter.git", branch = "main" }
tokio-serial = "5.4.1"
tokio = { version = "1.17.0", features = ["full"] }
tokio-util = { version = "0.7.0", features = ["full"] }
confy = "0.4.0"
serde = "1.0.136"
serde_json = "1.0.79"
serde_derive = "1.0.136"
futures = "0.3.21"
bytes = "1.1.0"
log = "0.4.0"
env_logger = "0.9.0"