[package]
name = "opc-ua"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "opcua-client"
path = "src/client.rs"

[[bin]]
name = "opcua-server"
path = "src/server.rs"

[[bin]]
name = "opcua-grpc-server"
path = "src/opcua-grpc-server.rs"

[dependencies]
sensor-grpc-adapter = { git = "https://github.com/fprotopapa/sensor-grpc-adapter.git", branch = "main" }
opcua-client = "0.8.1"
opcua-server = "0.8.1"
chrono = "0.4"
tokio = { version = "1.17.0", features = ["full"] }
confy = "0.4.0"
serde = "1.0.136"
serde_derive = "1.0.136"
rand = "0.8.5"
openssl = { version = "0.10", features = ["vendored"] }
log = "0.4.0"
env_logger = "0.9.0"
