[package]
name = "send_doc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "dock-server"
path = "src/server.rs"

[[bin]]
name = "dock-client"
path = "src/client.rs"

[dependencies]
sensor-grpc-adapter = { git = "https://github.com/fprotopapa/sensor-grpc-adapter.git", branch = "main" }
tokio = { version = "1.17.0", features = ["full"] }
rand = "0.8.5"
confy = "0.4.0"
serde = "1.0.136"
serde_derive = "1.0.136"
log = "0.4.0"
env_logger = "0.9.0"
