[package]
name = "public_channel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iota-streams = { git = "https://github.com/iotaledger/streams", rev = "4e3a2c8"} # branch=develop
tokio = { version = "1.17.0", features = ["full"] }
iota-client = "1.1.1"
rand = "0.8.5"
confy = "0.4.0"
serde = "1.0.136"
serde_derive = "1.0.136"
log = "0.4.0"
env_logger = "0.9.0"
