[package]
name = "tangle_access"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
identity = { git = "https://github.com/iotaledger/identity.rs", rev = "4b6c1c7", features = ["account"]} # branch=dev
tokio = { version = "1.17.0", features = ["full"] }
serde = "1.0.136"
serde_derive = "1.0.136"
serde_json = "1.0.79"
confy = "0.4.0"
log = "0.4.0"
env_logger = "0.9.0"